test/libhyperion/syntaxTests/variableDeclaration/for.hyp
pragma hyperion >=0.1.0;

contract C
{
	function f(uint x) public pure {
		for (uint i = 0; i < x; ++i)
			uint y;
	}
}
// ----
// SyntaxError 9079: (107-113): Variable declarations can only be used inside blocks.
